Tidy up & bug squashing

--- a/src/sass/_dev.scss
+++ b/src/sass/_dev.scss
@@ -1,81 +1,2 @@
 // Nothing should stay here.
 // -----------------------------------------------------------------------------
-
-// Parallax effect POC.
-// -----------------------------------------------------------------------------
-
-.viewport {
-  perspective: 1px;
-  perspective-origin: 0 0;
-  width: 100%;
-  height: 100vh;
-  overflow-x: hidden;
-  // overflow-y: scroll;
-  transform-style: preserve-3d;
-}
-
-.parallax-item {
-  transform-origin: 0 0;
-  &.fast {
-    transform: translateZ(-1px) scale(2);
-  }
-  &.slow {
-    transform: translateZ(-2px) scale(3);
-  }
-}
-
-.blob {
-  // background-color: rgba(white, 0.5);
-  width: 100%;
-  // height: 100px;
-  height: 200vh;
-  // margin-top: -100vh;
-  z-index: -10;
-
-
-
-  // // was overlay-shim
-  // // Vars used in diagonal stripes.
-  // $stripe-height: 500px;
-  // $stripe-color-1: rgba(white, 0.7);
-  // $stripe-color-2: rgba($c-brand-dusty-pink, 0.7);
-  //
-  // // Diagonal stripes
-  // // TODO: Adjust stripe height at different breakpoints.
-  // // TODO: Adjust alpha values at different breakpoints.
-  // background-image: repeating-linear-gradient(
-  //     -5deg,
-  //     $stripe-color-1 0,
-  //     $stripe-color-1 $stripe-height,
-  //     $stripe-color-2 $stripe-height,
-  //     $stripe-color-2 ($stripe-height*2)
-  // );
-
-
-  // Fill width & height of entry content.
-  position: absolute;
-  top: 0;
-  right: 0;
-  // bottom: 0;
-  left: 0;
-
-
-  // was overlay-shim
-  // Vars used in diagonal stripes.
-  $stripe-height: 1500px;
-  $offset: 200px; // Accounts for header. By eye for now.
-  $stripe-color-1: rgba($c-brand-blue-teal, 0.7);
-  $stripe-color-2: rgba($c-brand-dusty-pink, 0.7);
-
-  // Diagonal stripes
-  // TODO: Adjust stripe height at different breakpoints.
-  // TODO: Adjust alpha values at different breakpoints.
-  background-image: repeating-linear-gradient(
-      -5deg,
-      $stripe-color-1 $offset,
-      $stripe-color-1 $stripe-height+$offset,
-      $stripe-color-2 $stripe-height+$offset,
-      $stripe-color-2 ($stripe-height*2)+$offset
-  );
-  //
-}
