--- a/src/sass/components/_timeline-entry-icon.scss
+++ b/src/sass/components/_timeline-entry-icon.scss
@@ -2,7 +2,7 @@
   @include size(40px);
   position: absolute;
   top: 0;
-  left: 0;
+  left: 15px;
   text-align: center;
   font-weight: bold;
   text-transform: uppercase;
